스타일 수정

--- a/src/App.css
+++ b/src/App.css
@@ -263,26 +263,10 @@ input:focus-visible {
   margin: 10px 0;
 } */
 
-/* 사이드바 스타일 소스 */
-.sidebar {
-  position: fixed;
-  top: 0;
-  left: -100%; /* 기본적으로 사이드바는 화면 왼쪽 바깥에 숨겨져 있음 */
-  width: 250px; /* 또는 원하는 너비 */
-  height: 100%;
-  background-color: pink; /* 또는 원하는 배경색 */
-  transition: left 0.3s ease; /* 부드러운 애니메이션 효과 */
-  z-index: 1000; /* 다른 요소들 위에 오도록 */
-}
-
-.sidebar.open {
-  left: 0; /* 사이드바를 화면에 표시 */
-  /* transform: translateX(0); */
-}
-
 /* 대형 화면에서 햄버거 메뉴 버튼 숨기기 */
 .menu-toggle {
   display: none;
+  z-index: 1001;
 }
 
 @media (max-width: 768px) {
@@ -297,6 +281,7 @@ input:focus-visible {
     border: 0;
     padding: 0 8px;
     margin-left: 12px;
+    /* z-index: 2; */
   }
   .menu-list {
     display: none;
@@ -306,5 +291,24 @@ input:focus-visible {
   }
   .binBox {
     display: none;
+  }
+  /* 사이드바 스타일 소스 */
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: -100%; /* 기본적으로 사이드바는 화면 왼쪽 바깥에 숨겨져 있음 */
+    width: 250px; /* 또는 원하는 너비 */
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.95); /* 또는 원하는 배경색 */
+    transition: left 0.3s ease; /* 부드러운 애니메이션 효과 */
+    z-index: 1000; /* 다른 요소들 위에 오도록 */
+    flex-direction: column;
+    /* border-right: 1px solid #ff0000; */
+    box-shadow: 2px 0 8px rgba(0, 0, 0, 0.3);
+  }
+
+  .sidebar.open {
+    left: 0; /* 사이드바를 화면에 표시 */
+    /* transform: translateX(0); */
   }
 }
